// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> create tabs component 1`] = `
<li
  className="fd-tabs__item"
>
  <a
    aria-controls="1"
    className="fd-tabs__link"
    href="#1"
    onClick={[Function]}
    role="tab"
  >
    <span
      className="fd-tabs__tag"
    >
      Tab 1
    </span>
  </a>
</li>
`;

exports[`<Tabs /> create tabs component 2`] = `
<li
  className="fd-tabs__item"
  disabled={true}
>
  <a
    aria-controls="3"
    className="fd-tabs__link"
    href="#3"
    onClick={[Function]}
    role="tab"
  >
    <span
      className="fd-tabs__tag"
    >
      Tab 3
    </span>
  </a>
</li>
`;

exports[`<Tabs /> create tabs component 3`] = `
<li
  className="fd-tabs__item"
>
  <a
    aria-controls="4"
    className="fd-tabs__link sap-icon--cart"
    href="#4"
    onClick={[Function]}
    role="tab"
  >
    <span
      className="fd-tabs__tag"
    />
  </a>
</li>
`;
